Bug with flyout z-index main container

--- a/css/Stashy.Flyout.css
+++ b/css/Stashy.Flyout.css
@@ -113,7 +113,7 @@
 	position:relative;
 	clear: both;
 	overflow: hidden;
-	z-index:999;
+	z-index:1;
 }
 
 .js .st-flyout-container .st-flyout-menu {
